--- a/index.html
+++ b/index.html
@@ -14,8 +14,42 @@
         MEMORY CARD GAME
     </div>
     <div id="contentSpace">
-        <div class="card unturned invisible">
-
+        <div class="card invisible">
+            <div class="backImg"></div>
+        </div>
+        <div class="card invisible">
+            <div class="backImg"></div>
+        </div>
+        <div class="card invisible">
+            <div class="backImg"></div>
+        </div>
+        <div class="card invisible">
+            <div class="backImg"></div>
+        </div><div class="card invisible">
+            <div class="backImg"></div>
+        </div>
+        <div class="card invisible">
+            <div class="backImg"></div>
+        </div><div class="card invisible">
+            <div class="backImg"></div>
+        </div>
+        <div class="card invisible">
+            <div class="backImg"></div>
+        </div><div class="card invisible">
+            <div class="backImg"></div>
+        </div>
+        <div class="card invisible">
+            <div class="backImg"></div>
+        </div><div class="card invisible">
+            <div class="backImg"></div>
+        </div>
+        <div class="card invisible">
+            <div class="backImg"></div>
+        </div><div class="card invisible">
+            <div class="backImg"></div>
+        </div>
+        <div class="card invisible">
+            <div class="backImg"></div>
         </div>
     </div>
 </body>
