--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible'>
-    <title>Page Title</title>
+    <title>Memory Game</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link rel='stylesheet' href='assets/css/reset.css'>
     <link rel='stylesheet' href='assets/css/styles.css'>
@@ -15,42 +15,10 @@
     </div>
     <div id="contentSpace">
         <div class="card invisible">
-            <div class="backImg"></div>
+            <div class="back img"></div>
         </div>
-        <div class="card invisible">
-            <div class="backImg"></div>
-        </div>
-        <div class="card invisible">
-            <div class="backImg"></div>
-        </div>
-        <div class="card invisible">
-            <div class="backImg"></div>
-        </div><div class="card invisible">
-            <div class="backImg"></div>
-        </div>
-        <div class="card invisible">
-            <div class="backImg"></div>
-        </div><div class="card invisible">
-            <div class="backImg"></div>
-        </div>
-        <div class="card invisible">
-            <div class="backImg"></div>
-        </div><div class="card invisible">
-            <div class="backImg"></div>
-        </div>
-        <div class="card invisible">
-            <div class="backImg"></div>
-        </div><div class="card invisible">
-            <div class="backImg"></div>
-        </div>
-        <div class="card invisible">
-            <div class="backImg"></div>
-        </div><div class="card invisible">
-            <div class="backImg"></div>
-        </div>
-        <div class="card invisible">
-            <div class="backImg"></div>
-        </div>
+        
+        
     </div>
 </body>
 </html>
