set generation of cards

--- a/index.html
+++ b/index.html
@@ -13,12 +13,6 @@
     <div id="title">
         MEMORY CARD GAME
     </div>
-    <div id="contentSpace">
-        <div class="card invisible">
-            <div class="back img"></div>
-        </div>
-        
-        
-    </div>
+    <ul class="contentSpace"></ul>
 </body>
 </html>
