--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
     <div id="title">
         INITIAL D MEMORY CARD GAME
     </div>
+    <div id="timer">
+    </div>
     <ul class="contentSpace">
         <p>How many cards you want to play with?</p>
         <select id="numberOfCards" name="numberOfCards">
