--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <p><span id="seconds">00</span><span class="red">:</span><span id="tens">00</span></p>
     </div>
     <div id="moveCounter">
-        <p><span>MOVES </span><span class="red">: </span><span id="moves">0</span></p>
+        <p><span id="moves"></span><span> MOVES</span></p>
     </div>
     <ul class="contentSpace">
         <p>How many cards you want to play with?</p>
