small css update on counters (wip)

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible'>
@@ -9,15 +10,19 @@
     <link rel='stylesheet' href='assets/css/styles.css'>
     <script src='assets/js/scripts.js'></script>
 </head>
+
 <body>
     <div id="title">
-        <p class="logo">INITIAL <span class="red">D</span></p> <p>MEMORY CARD GAME</p>
+        <p class="logo">INITIAL <span class="red">D</span></p>
+        <p>MEMORY CARD GAME</p>
     </div>
-    <div id="timer">
-        <p><span id="seconds">00</span><span class="red">:</span><span id="tens">00</span></p>
-    </div>
-    <div id="moveCounter">
-        <p><span id="moves"></span><span> MOVES</span></p>
+    <div id="counters">
+        <div id="timer">
+            <p><span id="seconds">00</span><span class="red">:</span><span id="tens">00</span></p>
+        </div>
+        <div id="moveCounter">
+            <p><span id="moves"></span><span> MOVES</span></p>
+        </div>
     </div>
     <ul class="contentSpace">
         <p>How many cards you want to play with?</p>
@@ -36,4 +41,5 @@
         </button>
     </ul>
 </body>
+
 </html>
