--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
         <p>MEMORY CARD GAME</p>
     </div>
     <div id="counters">
+        <div id="moveCounter">
+            <p><span id="moves">0</span><span> MOVES</span></p>
+        </div>
         <div id="timer">
             <p><span id="seconds">00</span><span class="red">:</span><span id="tens">00</span></p>
-        </div>
-        <div id="moveCounter">
-            <p><span id="moves"></span><span> MOVES</span></p>
         </div>
     </div>
     <ul class="contentSpace">
